[Qt] Mock DeviceOrientation client for DRT https://bugs.webkit.org/show_bug.cgi?id=47490

Reviewed by Kenneth Rohde Christiansen.

WebCore:

* WebCore.pro:

WebKit/qt:

* WebCoreSupport/DeviceOrientationClientMockQt.cpp: Added.
(WebCore::DeviceOrientationClientMockQt::client):
(WebCore::DeviceOrientationClientMockQt::DeviceOrientationClientMockQt):
(WebCore::DeviceOrientationClientMockQt::~DeviceOrientationClientMockQt):
(WebCore::DeviceOrientationClientMockQt::setController):
(WebCore::DeviceOrientationClientMockQt::startUpdating):
(WebCore::DeviceOrientationClientMockQt::stopUpdating):
(WebCore::DeviceOrientationClientMockQt::lastOrientation):
(WebCore::DeviceOrientationClientMockQt::deviceOrientationControllerDestroyed):
(WebCore::DeviceOrientationClientMockQt::setOrientation):
* WebCoreSupport/DeviceOrientationClientMockQt.h: Added.
* WebCoreSupport/DeviceOrientationClientQt.cpp:
* WebCoreSupport/DeviceOrientationProviderQt.cpp:
(WebCore::DeviceOrientationProviderQt::DeviceOrientationProviderQt):
(WebCore::DeviceOrientationProviderQt::~DeviceOrientationProviderQt):
(WebCore::DeviceOrientationProviderQt::changeDeviceOrientation):
* WebCoreSupport/DeviceOrientationProviderQt.h:
* WebCoreSupport/DumpRenderTreeSupportQt.cpp:
(DumpRenderTreeSupportQt::activeMockDeviceOrientationClient):
(DumpRenderTreeSupportQt::removeMockDeviceOrientation):
(DumpRenderTreeSupportQt::setMockDeviceOrientation):
* WebCoreSupport/DumpRenderTreeSupportQt.h:

WebKitTools:

* DumpRenderTree/qt/DumpRenderTreeQt.cpp:
(WebCore::DumpRenderTree::DumpRenderTree):
(WebCore::DumpRenderTree::~DumpRenderTree):
* DumpRenderTree/qt/LayoutTestControllerQt.cpp:
(LayoutTestController::setMockDeviceOrientation):

LayoutTests:

* platform/qt/Skipped:

Canonical link: https://commits.webkit.org/64223@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@73862 268f45cc-cd09-0410-ab3c-d52691b4dbfc