WebKit/qt/WebCoreSupport/DumpRenderTreeSupportQt.h
@@ -94,6 +94,10 @@ public:
     static void removeWhiteListAccessFromOrigin(const QString& sourceOrigin, const QString& destinationProtocol, const QString& destinationHost, bool allowDestinationSubdomains);
     static void resetOriginAccessWhiteLists();
 
+    static void activeMockDeviceOrientationClient(bool b);
+    static void removeMockDeviceOrientation();
+    static void setMockDeviceOrientation(bool canProvideAlpha, double alpha, bool canProvideBeta, double beta, bool canProvideGamma, double gamma);
+
     static void setMockGeolocationPosition(double latitude, double longitude, double accuracy);
     static void setMockGeolocationError(int errorCode, const QString& message);
 
