third_party/WebKit/WebKit/qt/WebCoreSupport/DeviceOrientationClientMockQt.h
@@ -18,47 +18,45 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
  * Boston, MA 02110-1301, USA.
  *
  */
-#ifndef DeviceOrientationProviderQt_h
-#define DeviceOrientationProviderQt_h
+#ifndef DeviceOrientationClientMockQt_h
+#define DeviceOrientationClientMockQt_h
 
-#include "DeviceOrientation.h"
+#include "DeviceOrientationClient.h"
 #include "RefPtr.h"
 
 #include <QObject>
-#include <QRotationFilter>
-
-QTM_USE_NAMESPACE
 
 namespace WebCore {
 
-class DeviceOrientationClientQt;
+class DeviceOrientation;
+class DeviceOrientationClientMock;
+class DeviceOrientationController;
 
-class DeviceOrientationProviderQt : public QObject, public QRotationFilter {
+class DeviceOrientationClientMockQt : public QObject, public DeviceOrientationClient {
     Q_OBJECT
 public:
-    DeviceOrientationProviderQt();
-    ~DeviceOrientationProviderQt();
+    static DeviceOrientationClientMockQt* client();
+    virtual ~DeviceOrientationClientMockQt();
 
-    bool filter(QRotationReading*);
-    void start();
-    void stop();
-    bool isActive() const { return m_rotation.isActive(); }
-    DeviceOrientation* orientation() const { return m_orientation.get(); }
-    bool hasAlpha() const { return m_rotation.property("hasZ").toBool(); }
+    virtual void setController(DeviceOrientationController*);
+    virtual void startUpdating();
+    virtual void stopUpdating();
+    virtual DeviceOrientation* lastOrientation() const;
+    virtual void deviceOrientationControllerDestroyed();
+    void setOrientation(bool canProvideAlpha, double alpha, bool canProvideBeta, double beta, bool canProvideGamma, double gamma);
+    static bool mockIsActive;
 
 Q_SIGNALS:
-    void deviceOrientationChanged(DeviceOrientation*);
-
-public Q_SLOTS:
-    void changeDeviceOrientation(DeviceOrientation*);
+    void mockOrientationChanged(DeviceOrientation*);
 
 private:
-    void activeClientMock();
+    DeviceOrientationClientMockQt();
 
+    DeviceOrientationClientMock* m_clientMock;
+    DeviceOrientationController* m_controller;
     RefPtr<DeviceOrientation> m_orientation;
-    QRotationSensor m_rotation;
 };
 
-}
+} // namespace WebCore
 
-#endif // DeviceOrientationProviderQt_h
+#endif // DeviceOrientationClientMockQt_h
